Fix main background.

--- a/design/default/generate/documents/static/styles/_config.scss
+++ b/design/default/generate/documents/static/styles/_config.scss
@@ -149,7 +149,7 @@ $aside__menu__hierarchy5__size: 0.9rem;
 $aside__menu__hierarchy6__size: 0.8rem;
 $aside__menu__hierarchy7__size: 0.8rem;
 
-$main__article__background_color: $color-white-1;
+$main__background_color: $color-white-1;
 $main__article__mutation_separator___color: $color-blue-9;
 $main__article__menu__font_family: 'Roboto', sans-serif;
 $main__article__menu__font_weight: 300;
