--- a/design/default/generate/documents/static/styles/_screen_layout.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout.scss
@@ -38,6 +38,7 @@ body {
         grid-column-end: span 1;
         grid-row-start: 3;
         grid-row-end: span 1;
+        background-color: config.$main__background_color;
     }
 
     > footer {
@@ -50,7 +51,7 @@ body {
 
 @media only screen and (min-width: config.$body__responsive_threshold) {
     body {
-        grid-template-columns: minmax(auto, 20rem) auto;
+        grid-template-columns: max-content auto;
         grid-template-rows: auto auto auto 3rem;
 
         > header {
@@ -73,6 +74,7 @@ body {
             grid-column-end: span 1;
             grid-row-start: 2;
             grid-row-end: span 2;
+            min-height: 50vh;
         }
 
         > footer {
