--- a/design/default/generate/documents/static/styles/_screen_layout_section_article.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout_section_article.scss
@@ -1,69 +1,128 @@
 @use 'config';
 
-code.pygments {
-    pre {
+code.source-code-outer {
+    display: block;
+    position: relative;
+    margin: 1rem 0;
+    padding: 0.5rem;
+    background-color: config.$color-gray-1;
+
+    > button.original-code-copy {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+
+        > img.original-code-copy {
+            width:  1rem;
+            height: 1rem;
+        }
+    }
+
+    > pre.source-code-inner {
+        display: block;
         padding: 1rem 1rem 1rem 3rem;
         border: config.$common__border_width solid config.$color-gray-9;
-        background-color: config.$color-gray-2;
+        max-width: calc(100vw - 43rem);
+        white-space: pre-wrap;
+        word-wrap: break-word;
+
+        > ol {
+            > li {
+                &::marker {
+                    color: config.$color-gray-5;
+                }
+
+                &:hover {
+                    background-color: config.$color-gray-2;
+
+                    &::marker {
+                        color: config.$color-gray-9;
+                    }
+                }
+
+            }
+        }
     }
 }
 
-div.admonition {
-    margin: 1rem 0;
+figure.illustration-outer {
+    position: relative;
+    width: max-content;
+    padding: 0.5rem;
 
-    > div.admonition-content {
-        clear: both;
+    > button.original-code-copy {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1;
+
+        > img.original-code-copy {
+            width:  1rem;
+            height: 1rem;
+        }
+    }
+
+    > img.illustration-inner {
+        padding: 1rem 1rem 1rem 1rem;
+        border: config.$common__border_width solid config.$color-gray-9;
+    }
+
+    > figcaption.illustration-inner {
+        font-style: italic;
+    }
+}
+
+div.admonition-outer {
+    position: relative;
+    margin: 1rem 0;
+    padding: 0.5rem;
+
+    > div.admonition-inner {
+        display: grid;
+        grid-template-columns: 1rem auto 1rem auto 1rem ;
+        grid-template-rows: 1rem auto 1rem ;
+
 
         > figure.admonition {
-            float: left;
-            padding: 0.5rem;
-            margin: 0.5rem;
+            grid-column-start: 2;
+            grid-column-end: span 1;
+            grid-row-start: 2;
+            grid-row-end: span 1;
 
             > img.admonition {
-                width: 4rem;
+                margin: 1rem;
+                width:  4rem;
                 height: 4rem;
             }
         }
 
         > p.admonition {
-            min-height: 5rem;
-            padding: 1rem 0.5rem 1rem 8rem;
+            grid-column-start: 4;
+            grid-column-end: span 1;
+            grid-row-start: 2;
+            grid-row-end: span 1;
         }
     }
 }
 
-div.admonition-note {
-    background-color: config.$main__article__admonition_note__background_color;
-    > div.admonition-content {
-        > figure.admonition-note {
-            background-color: config.$color-blue-9;
+@mixin admonition-specific($kind, $color1, $color2) {
+    div.admonition-outer-#{$kind} {
+        background-color: #{$color1};
+
+        > div.admonition-inner-#{$kind} {
+            border: 0.1rem solid #{$color2};
+
+            > figure.admonition-#{$kind} {
+                background-color: #{$color2};
+            }
         }
     }
 }
 
-div.admonition-tip {
-    background-color: config.$main__article__admonition_tip__background_color;
-    > div.admonition-content {
-        > figure.admonition-tip {
-            background-color: config.$color-green-9;
-        }
-    }
-}
-
-div.admonition-warning {
-    background-color: config.$main__article__admonition_warning__background_color;
-    > div.admonition-content {
-        > figure.admonition-warning {
-            background-color: config.$color-red-9;
-        }
-    }
-}
-
-div.admonition-caution {
-    background-color: config.$main__article__admonition_caution__background_color;
-    > div.admonition-content {
-        > figure.admonition-caution {
-            background-color: config.$color-orange-9;
-        }
-    }
-}
+@include admonition-specific(note,    config.$color-blue-1,   config.$color-blue-9);
+@include admonition-specific(tip,     config.$color-green-1,  config.$color-green-9);
+@include admonition-specific(warning, config.$color-red-1,    config.$color-red-9);
+@include admonition-specific(caution, config.$color-orange-1, config.$color-orange-9);
