--- a/design/default/generate/templates/base.html.j2
+++ b/design/default/generate/templates/base.html.j2
@@ -43,7 +43,7 @@
         <link rel="stylesheet" href="{{ 'static/styles/screen.css'|relative_link }}" integrity="{{ 'static/styles/screen.css'|subresource_integrity }}"/>
 {%- endblock head_styles -%}
 {%- block head_scripts -%}
-        <script src="{{ 'static/scripts/scroll.js'|relative_link }}" integrity="{{ 'static/scripts/scroll.js'|subresource_integrity }}"/>
+        <script src="{{ 'static/scripts/default.js'|relative_link }}" integrity="{{ 'static/scripts/default.js'|subresource_integrity }}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 {%- endblock head_scripts -%}
         <title>{%- block head_title -%}{{ this.variables.title }}{%- endblock head_title -%}</title>
