--- a/design/default/generate/documents/static/styles/_screen_layout_main.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout_main.scss
@@ -111,6 +111,8 @@ body {
                 grid-row-start: 2;
                 grid-row-end: span 1;
                 padding: 1rem;
+                background-color: config.$main__aside__background_color;
+                color: config.$main__aside__color;
             }
         }
     }
@@ -120,7 +122,7 @@ body {
     body {
         > main {
             > section {
-                grid-template-columns: 1fr 20rem;
+                grid-template-columns: 1fr #{config.$layout__rside_width}rem;
                 grid-template-rows: auto;
 
                 > article {
