--- a/design/default/generate/documents/static/styles/_screen_layout.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout.scss
@@ -3,9 +3,6 @@
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
-    font-family: config.$body__font_family;
-    font-weight: config.$body__font_weight;
-    font-size: config.$body__font_size;
     overflow-y: scroll;
     height: 100%;
 }
@@ -51,7 +48,7 @@ body {
 
 @media only screen and (min-width: config.$body__responsive_threshold) {
     body {
-        grid-template-columns: max-content auto;
+        grid-template-columns: #{config.$layout__lside_width}rem auto;
         grid-template-rows: auto auto auto 3rem;
 
         > header {
