--- a/design/default/generate/documents/static/styles/_screen_layout.scss
+++ b/design/default/generate/documents/static/styles/_screen_layout.scss
@@ -47,7 +47,7 @@ body {
 }
 
 @media only screen and (min-width: config.$body__responsive_threshold) {
-    body {
+    body[data-has-lside="yes"] {
         grid-template-columns: #{config.$layout__lside_width}rem auto;
         grid-template-rows: auto auto auto 3rem;
 
@@ -81,6 +81,41 @@ body {
             grid-column-start: 1;
             grid-column-end: span 2;
             grid-row-start: 4;
+            grid-row-end: span 1;
+        }
+    }
+
+    body[data-has-lside="no"] {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto 3rem;
+
+        > header {
+            grid-column-start: 1;
+            grid-column-end: span 1;
+            grid-row-start: 1;
+            grid-row-end: span 1;
+
+        }
+
+        > aside {
+            display: none;
+        }
+
+        > main {
+            grid-column-start: 1;
+            grid-column-end: span 1;
+            grid-row-start: 2;
+            grid-row-end: span 1;
+            min-height: 50vh;
+        }
+
+        > footer {
+            position: sticky;
+            bottom: 0;
+            z-index: 10;
+            grid-column-start: 1;
+            grid-column-end: span 1;
+            grid-row-start: 3;
             grid-row-end: span 1;
         }
     }
