--- a/design/default/generate/templates/base.html.j2
+++ b/design/default/generate/templates/base.html.j2
@@ -49,7 +49,7 @@
         <title>{%- block head_title -%}{{ this.variables.title }}{%- endblock head_title -%}</title>
 {%- endblock head -%}
     </head>
-    <body data-scroll-y="0">
+    <body data-scroll-y="0" data-has-lside="{%- if this.variables.lside|default(true) -%}yes{%- else -%}no{%- endif -%}" data-has-rside="{%- if this.variables.rside|default(true) -%}yes{%- else -%}no{%- endif -%}" >
 {%- block body -%}
         <header>
             <figure class="logotype">
@@ -102,7 +102,7 @@
 {%- if (template in this.ancestors) or (template.output_path == this.output_path) -%}
 {{ hierarchy_navigation(template) }}
 {%- endif -%}
-{%- endfor-%}
+{%- endfor -%}
 {%- endblock main_nav -%}
                 </menu>
             </nav>
